chore: 프로덕션 서버 환경에 맞게 URL 설정
프로덕션 서버에서 환경변수 환경에 알맞도록 URL을 설정하였습니다

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     name: my-blog
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:${DB_TYPE:mariadb}://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_SCHEMA:my_blog}?serverTimezone=KST
+    url: ${DB_URL}
     username: ${DB_USER:root}
     password: ${DB_PASSWORD:123456}
   jpa:
