--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,11 @@ spring:
         dialect: org.hibernate.dialect.MariaDBDialect
   cache:
     type: caffeine
+  security:
+    jwt:
+        secret: ${JWT_SECRET:my-secret-key}
+        access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION:86400000}
+        refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION:2592000000}
 aws:
     s3:
         access-key: ${AWS_ACCESS_KEY_ID}
