--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,8 +18,8 @@ spring:
   security:
     jwt:
         secret: ${JWT_SECRET:my-secret-key}
-        access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION:86400000}
-        refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION:2592000000}
+        access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION:3600}  # 1 hour
+        refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION:2592000}  # 30 days
 aws:
     s3:
         access-key: ${AWS_ACCESS_KEY_ID}
