chore: JWT 및 Redis 관련 프로퍼티 설정값 추가
JWT와 Redis 관련 프로퍼티의 설정값을 추가하였습니다

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -13,8 +13,17 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
   cache:
     type: caffeine
+  security:
+    jwt:
+      secret: ${JWT_SECRET:my-secret-key}
+      access-token-expiration: ${JWT_ACCESS_TOKEN_EXPIRATION:3600}  # 1 hour
+      refresh-token-expiration: ${JWT_REFRESH_TOKEN_EXPIRATION:172800}  # 2 days
 aws:
   s3:
     access-key: ${AWS_ACCESS_KEY_ID}
