--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -19,6 +19,10 @@ spring:
       port: ${REDIS_PORT:6379}
   cache:
     type: caffeine
+  servlet:
+    multipart:
+      max-file-size: 15MB
+      max-request-size: 25MB
   security:
     jwt:
       secret: ${JWT_SECRET:my-secret-key}
